--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -47,8 +47,8 @@
 
     <footer>
 	    <center><h4>Video not playing ? possibly because your browser or the player doesn't support codec please download and watch :D</h4></center><p>
-	    <center><h2><a href="https://youtube.com/OpusTechz">
-  <img src="https://telegra.ph/file/c4bb11047d39e129d69e7.png" alt="tsnmstream4u.gq" width="150" height="100"></center>
+	    <center><h2><a href="https://tsnmstream4u.gq">
+  <img src="https://telegra.ph/file/c4bb11047d39e129d69e7.png" alt="tsnmstream4u.gq" width="200" height="100"></center>
 </a></center>
 	    
 	    
