--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -51,9 +51,44 @@
   <img src="https://telegra.ph/file/c4bb11047d39e129d69e7.png" alt="tsnmstream4u.gq" width="200" height="100"></center>
 </a></center>
 	    
+
+	    #ADS
+	    <script type='text/javascript' src='//seekgeographical.com/4d/71/a5/4d71a52fdb151f49530446760e01ab05.js'></script>   
 	    
+<script type="text/javascript">
+
+	atOptions = {
+
+		'key' : '99fdbf96b556669a580a41be9073ef66',
+
+		'format' : 'iframe',
+
+		'height' : 50,
+
+		'width' : 320,
+
+		'params' : {}
+
+	};
+
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://seekgeographical.com/99fdbf96b556669a580a41be9073ef66/invoke.js"></scr' + 'ipt>');
+
+</script>
+	    
+	<script type="text/javascript">
+	atOptions = {
+		'key' : '99fdbf96b556669a580a41be9073ef66',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://seekgeographical.com/99fdbf96b556669a580a41be9073ef66/invoke.js"></scr' + 'ipt>');
+</script>
 	    
 
+	    #ADSEND
+	    
 
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
