--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+	
+	<HEAD>
+<SCRIPT language="JavaScript">
+<!--hide
+
+var password;
+var pass1="tsnm@rssups";
+
+password=prompt('Please enter your password to view this page!',' ');
+
+if (password==pass1)
+  alert('Password Correct! Click OK to enter!');
+else
+   {
+    window.location="https://tsnmstream4u.gq";
+    }
+
+//-->
+</SCRIPT>
+</HEAD>
+	
+	
 <head>
     <meta charset="UTF-8">
     <meta property="og:image" content="https://i.ibb.co/M8S0Zzj/live-streaming.png" itemprop="thumbnailUrl">
