--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -14,7 +14,7 @@ if (password==pass1)
   alert('Password Correct! Click OK to enter!');
 else
    {
-    alert('Incorrect Password Join Our Group and Send #strmpass To get Password');
+    window.location="stop.html"; 
     }
 
 //-->
