--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -14,7 +14,7 @@ if (password==pass1)
   alert('Password Correct! Click OK to enter!');
 else
    {
-    window.location.href='Adarsh/template/stop.html'; 
+    window.location="https://godofh3ell.github.io/Incrt-pass/stop.html"; 
     }
 
 //-->
